text overlapping problem solved

--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ header {
 
 .banner-text .main-head {
   color: #fff;
-  font-size: 4rem;
+  font-size: 5vw;
   margin-left: 2vw;
 }
 
@@ -309,6 +309,7 @@ header {
 /******************* ABOUT ***********************/
 
 .about {
+  margin: 1vw;
   padding: 6.8% 0% 7%;
   text-align: center;
 }
